Fixed spacing of submits

--- a/app/assets/stylesheets/video/videopost.css
+++ b/app/assets/stylesheets/video/videopost.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     /* align-content: center; */
     position: relative;
     min-height: 370px;
